// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getDirectiveDeclaration should be defined 1`] = `
Object {
  "args": Object {
    "role": Object {
      "astNode": undefined,
      "defaultValue": undefined,
      "description": undefined,
      "extensions": undefined,
      "type": "String",
    },
  },
  "astNode": undefined,
  "description": undefined,
  "extensions": undefined,
  "isRepeatable": false,
  "locations": Array [
    "FIELD_DEFINITION",
  ],
  "name": "hasRole",
}
`;

exports[`if return null for a field when does not have permissions 1`] = `
Object {
  "data": Object {
    "field": Object {
      "private": null,
      "public": "public_exists",
    },
  },
}
`;

exports[`if role are correct 1`] = `
Object {
  "data": Object {
    "you": Any<String>,
  },
}
`;

exports[`if throw an Error when user does not have correct roles 1`] = `
Object {
  "data": Object {
    "together": null,
  },
  "errors": Anything,
}
`;

exports[`if throw error if no role inside token payload 1`] = `
Object {
  "data": Object {
    "you": null,
  },
  "errors": Anything,
}
`;
